增加pytest涵蓋度2

--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -33,6 +33,7 @@ jobs:
       continue-on-error: false
       run: |
         mkdir testresults
+        pip install pytest-cov
         pip install pytest && pytest --cov=./ --cov-config=.coveragerc --cov-report term-missing Tests/
 
     # Uploading unit test results to artifact store
